# jasshaus

./: .gitignore  Makefile  README.md  biome.json  headers_doc.txt  requirements.txt  rustfmt.toml
comm/: Cargo.toml
comm/src/: socket_message.rs
content/: game.html  index.html  package-lock.json  settings.html  tsconfig.json  tsdebug.json
content/css/: carpet.css  chat.css  game.css  hand.css  main.css  players.css  settings.css  voting.css  window.css  window_portrait.css
content/js/: formcreator.js  gamefinder.js  globals.js  loadwasm.js  settingpage.js  settings.js  storage.js  utility.js  utils.js  voting.js
content/js/game/: audio.js  carpet.js  chat.js  comm.js  events.js  hand.js  interface.js  main.js  player.js  players.js  round.js  window.js  ws.js  wshandler.js
content/ts/: carpet.ts  chat.ts  comm.ts  game.ts  hand.ts  home.ts  interface.ts  jass.ts  jasssettings.ts  main.ts  players.ts  utility.ts  voting.ts  wshandler.ts
game/: Cargo.toml
game/src/: card.rs  lib.rs  ruleset.rs  server.rs  setting.rs
htmlform/: Cargo.toml
htmlform/macros/: Cargo.toml
htmlform/macros/src/: lib.rs
htmlform/src/: lib.rs
jasshaus/: Makefile  README.md  filter.txt
jasshaus/content/: game.html  index.html
jasshaus/content/css/: carpet.css  game.css  hand.css  main.css  players.css  roomfinder.css  settings.css  window.css
jasshaus/content/ts/: .#wshandler.ts  carpet.ts  chat.ts  clientsetting.ts  comm.ts  formcreator.md  formcreator.ts  game.ts  hand.ts  home.ts  interface.ts  jass.ts  jasssettings.ts  main.ts  players.ts  roomfinder.ts  utility.ts  voting.ts  wshandler.ts
jasshaus/game/: Cargo.toml
jasshaus/game/src/: bitset.rs  card.rs  lib.rs  ruleset.rs  server.rs  setting.rs
jasshaus/server/: Cargo.toml
jasshaus/server/src/: main.rs
make/: replace.sh  run.sh
server/: Cargo.toml  bot.py  card.py  logger.py  player.py  room.py  server.py  show.py  utils.py
server/cli/: Cargo.toml
server/cli/src/: main.rs
server/jasshaus_server/: Cargo.toml
server/jasshaus_server/src/: main.rs
server/jassserver/: Cargo.toml
server/src/: lib.rs  main.rs  socket_message.rs
server/src/room/: client.rs  mod.rs
tichu/: Makefile  README.md
tichu/content/: game.html  index.html  node_modules  package-lock.json  package.json  tsconfig.json
tichu/content/css/: chat.css  game.css  hand.css  main.css  players.css  roomfinder.css  settings.css  voting.css
tichu/content/js/: formcreator.js  loadwasm.js  utility.js  voting.js
tichu/content/js/game/: carpet.js  comm.js  event.js  hand.js  interface.js  main.js  players.js  wshandler.js
tichu/content/ts/: chat.ts  clientsetting.ts  comm.ts  formcreator.ts  game.ts  hand.ts  home.ts  interface.ts  main.ts  players.ts  roomfinder.ts  tichu.ts  tichusettings.ts  utility.ts  voting.ts  wshandler.ts
tichu/game/: Cargo.toml
tichu/game/src/: card.rs  lib.rs  server.rs  setting.rs
tichu/game/src/trick/: consecutive.rs  fullhouse.rs  mod.rs  quadbomb.rs  samenum.rs  streetbomb.rs
tichu/server/: Cargo.toml
tichu/server/src/: main.rs
