[package]
name = "jasshaus-game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
tsify-next = "0.5.4"
wasm-bindgen = "0.2.99"

[profile.release]
lto = true
strip = true
opt-level = 's'
codegen-units = 1
panic = 'abort'
