[package]
name = "jasshaus-game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
json = "0.12"
htmlform = { path = "../htmlform" }
htmlform-macros = { path = "../htmlform/macros" }

serde = { version = "1.0", features = ["derive"] }
tsify-next = "0.5"
wasm-bindgen = "0.2"

[profile.release]
lto = true
strip = true
opt-level = 's'
codegen-units = 1
panic = 'abort'
