[package]
name = "game-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4"
rand = "0.8"
tokio = { version = "1", features = ["macros", "sync", "rt-multi-thread", "fs"] }
axum = {version = "0.8", features = ["ws"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
async-trait = "0.1"
bincode = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }