[package]
name = "jasshaus-game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
json = "0.12"
serde = { version = "1.0", features = ["derive"] }

# For WASM
htmlform = { path = "../../htmlform" }
htmlform-macros = { path = "../../htmlform/macros" }
tsify-next = { version = "0.5"  }
wasm-bindgen = { version = "0.2" }

# For the serer
game-server = { path = "../../server", optional = true }
async-trait = { version = "0.1", optional = true }
rand = { version = "0.8", optional = true }
serde-wasm-bindgen = "0.6.5"

[features]
server = ["dep:async-trait", "dep:game-server", "dep:rand"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
panic = 'abort'
