[package]
name = "tichu-game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
json = "0.12"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2" }
tsify-next = { version = "0.5", features = ["js"] }
serde-wasm-bindgen = "0.4"
serde-big-array = "0.5"
# serde_bytes = "0.11"
# bit-set = { version = "0.8", features = ["serde"] }
# bitvec = { version = "1", features = ["serde"] }

# For the serer
game-server = { path = "../../server", optional = true }
async-trait = { version = "0.1", optional = true }
rand = { version = "0.8", optional = true }

[dev-dependencies]
rand = { version = "0.8" }

[features]
server = ["dep:async-trait", "dep:game-server", "dep:rand"]
